# Copyright (c) Iputils Project, 2017-2021

# local edition: yvs, 2024

# features
option('CAP',          type: 'boolean', value: true,
	description: 'Capability support (with libcap)')
option('IDN',          type: 'boolean', value: true,
	description: 'IDN support (via libc)')
option('NLS',          type: 'boolean', value: true,
	description: 'NLS support (via gettext)')
option('RFC4620',      type: 'boolean', value: false,
	description: 'PING6 NodeInfo client (RFC4620)')
option('NONCE_MEMORY', type: 'boolean', value: false,
	description: 'PING6 NodeInfo nonce memory')

# executables
option('BUILD_PING',      type: 'boolean', value: true,
        description: 'Build ping')
option('BUILD_ARPING',    type: 'boolean', value: true,
        description: 'Build arping')
option('BUILD_CLOCKDIFF', type: 'boolean', value: true,
        description: 'Build clockdiff')
option('BUILD_TRACEPATH', type: 'boolean', value: true,
        description: 'Build tracepath')
option('BUILD_GAI',       type: 'boolean', value: true,
        description: 'Build gai tool')

# caps
option('NO_CAPS',        type: 'boolean', value: false,
	description: 'Do not set linux capabilities, nor suid bits')
option('PING_CAPS',      type: 'boolean', value: true,
	description: 'Set linux caps or suid bits on ping')
option('ARPING_CAPS',    type: 'boolean', value: true,
	description: 'Set linux caps or suid bits on arping')
option('CLOCKDIFF_CAPS', type: 'boolean', value: true,
	description: 'Set linux caps or suid bits on clockdiff')

# misc
option('TESTS',                 type: 'boolean', value: true,
	description: 'Include tests')
option('DOCGEN',                type: 'boolean', value: false,
	description: 'Generate man/html from xml templates')
option('ARPING_DEFAULT_DEVICE', type: 'string',  value: '',
	description: 'Default device for arping')

