# Copyright (c) Iputils Project, 2017-2021

# local edition: yvs, 2024

# features
option('CAP',          type: 'boolean', value: true,
	description: 'Build with linux capabilities (libcap)')
option('IDN',          type: 'boolean', value: true,
	description: 'IDN support (transparently via libc, or directly with libidn2)')
option('NLS',          type: 'boolean', value: true,
	description: 'NLS support (gettext)')
option('ALTNAMES',     type: 'boolean', value: true,
	description: 'Netdev-altnames support')
option('RFC4620',      type: 'boolean', value: false,
	description: 'PING6 NodeInfo client (RFC4620)')

# executables
option('BUILD_PING',      type: 'boolean', value: true,
        description: 'Build ping')
option('BUILD_ARPING',    type: 'boolean', value: true,
        description: 'Build arping')
option('BUILD_CLOCKDIFF', type: 'boolean', value: true,
        description: 'Build clockdiff')
option('BUILD_TRACEPATH', type: 'boolean', value: true,
        description: 'Build tracepath')
option('BUILD_GAI',       type: 'boolean', value: true,
        description: 'Build gai tool')

# extra
option('TESTS',                 type: 'boolean', value: true,
	description: 'Include tests')
option('INSTALL_WITH_CAPS',     type: 'boolean', value: false,
	description: 'Set linux capabilities at installation')
option('NEED_NET_RAW',          type: 'boolean', value: true,
	description: 'cap_net_raw+p is needed to ping')
option('INSTALL_WITH_SUID',     type: 'boolean', value: false,
	description: 'Set suid bit at installation')
option('NONCE_MEMORY',          type: 'boolean', value: false,
	description: 'PING6 NodeInfo nonce memory')
option('ARPING_DEFAULT_DEVICE', type: 'string',  value: '',
	description: 'Default device for arping')

